--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/favicon.png" />
-    <link rel="preload" as="image" href="/src/assets/assets/support-qr.jpg">
+    <link rel="preload" as="image" href="/support-qr.jpg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>메랜알리미</title>
   </head>
