--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/favicon.png" />
     <link rel="preload" as="image" href="/support-qr.jpg">
+    <link rel="preload" as="image" href="/static/logo.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>메랜알리미</title>
   </head>
