--- a/index.html
+++ b/index.html
@@ -1,12 +1,35 @@
 <!doctype html>
-<html lang="en">
+<html lang="ko">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/favicon.png" />
     <link rel="preload" as="image" href="/support-qr.jpg">
     <link rel="preload" as="image" href="/static/logo.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>메랜알리미</title>
+
+    <!-- Primary Meta Tags -->
+    <title>메랜알리미 - 메이플랜드 메랜지지 알림 서비스</title>
+    <meta name="title" content="메랜알리미 - 메이플랜드 메랜지지 알림 서비스" />
+    <meta name="description" content="메이플랜드 메랜지지 알림 서비스 - 메랜 지지 원하는 매물을 알림으로 빠르게 거래해보세요" />
+    <meta name="keywords" content="메랜알리미, 메랜 알림, 메랜지지 알림, 메이플랜드, 메랜지지, 매물 알림, 메랜 거래" />
+
+    <!-- Open Graph / Facebook / KakaoTalk -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://malanutil.com/malan-alerter/" />
+    <meta property="og:site_name" content="메랜알리미" />
+    <meta property="og:title" content="메랜알리미 - 메이플랜드 메랜지지 알림 서비스" />
+    <meta property="og:description" content="메이플랜드 메랜지지 알림 서비스 - 메랜 지지 원하는 매물을 알림으로 빠르게 거래해보세요" />
+    <meta property="og:image" content="https://malanutil.com/malan-alerter/static/preview-img.png" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:locale" content="ko_KR" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://malanutil.com/malan-alerter/" />
+    <meta property="twitter:title" content="메랜알리미 - 메이플랜드 메랜지지 알림 서비스" />
+    <meta property="twitter:description" content="메이플랜드 메랜지지 알림 서비스 - 메랜 지지 원하는 매물을 알림으로 빠르게 거래해보세요" />
+    <meta property="twitter:image" content="https://malanutil.com/malan-alerter/static/preview-img.png" />
   </head>
   <body>
     <div id="app"></div>
